<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E8E8"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:backgroundTint="#7559D9"
        android:drawableLeft="@drawable/flight_"
        android:text="@string/turn_off_flight_mode"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#D9525E"
        android:drawableLeft="@drawable/baseline_autorenew_24"
        android:text="@string/updating_profile"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#B4A60404"
        app:strokeWidth="2dp"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:backgroundTint="#C9C9C9"
        android:text="@string/picture_saved_to_gallery"
        android:textColor="#DC0C0C"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="@+id/button1"
        app:layout_constraintStart_toStartOf="@+id/button1"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:strokeColor="#717171"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:backgroundTint="#484D50"
        android:text="@string/unlocked_level_5"
        android:textColor="#477CAA"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:strokeColor="#3C609E"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:backgroundTint="#5F94D9"
        android:drawableLeft="@drawable/baseline_star_24"
        android:drawableRight="@drawable/baseline_star_24"
        android:text="@string/level_4_completed"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button3"
        app:layout_constraintStart_toStartOf="@+id/button3"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:backgroundTint="#49A660"
        android:drawableLeft="@drawable/baseline_pause_circle_24"
        android:text="@string/music_paused"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button4"
        app:layout_constraintStart_toStartOf="@+id/button4"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.28" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.67" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.67" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6525308" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497"
        app:srcCompat="@drawable/andy"
        android:contentDescription="@string/logo_de_android" />
</androidx.constraintlayout.widget.ConstraintLayout>